# create-react-app-bazel

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  bazel-app-example  bazel-bin  bazel-genfiles  bazel-out  bazel-testlogs  launch  launch.sh  launcher.js  package-lock.json  package.json  parcelgen.bzl  reactscripts.bzl  rollupgen.bzl  rsgen.bzl  seppuku.js  sigh.js  webpack_bin_test.sh
public/: index.html
src/: App.css  App.js
src/depth1/: depth1.js
src/depth1/depth2/: depth2.js
src/depth1/depth2/depth3/: depth3.js
