package(default_visibility = ["//visibility:public"])

# filegroup(
#   name = "node_modules",
#   srcs = glob(
#     ["node_modules/**/*"],
#     exclude=["node_modules/**/test/**"]
#     ),
# )

filegroup(name = "react-sources", srcs = glob(["src/**", "public/**"]))

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

nodejs_binary(
    name = "parcel",
    entry_point = "parcel-bundler/bin/cli.js",
    node_modules = "@noodles//:node_modules",
    data =  glob(["src/**", "public/**"]) + ["package.json", ".babelrc"],
)

load(":parcelgen.bzl", "parcel")

parcel(
    name = "parcel-build",
    srcs = ["//:react-sources", "package.json", ".babelrc"],
    node_modules="@noodles//:node_modules",
    entry_point = "src/index.js",
)
