package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")
load("@org_pubref_rules_protobuf//protobuf:rules.bzl", "proto_language", "proto_compile")
load(":parcelgen.bzl", "parcel")

filegroup(
  name = "node_modules",
  srcs = glob(
    ["node_modules/**/*"],
    exclude=["node_modules/**/test/**"]
    ),
)

filegroup(name = "testgroup", srcs = glob(["src/**", "public/**"]))

proto_language(
  name = "javascript",
  pb_plugin = "//:node_modules/ts-protoc-gen",
  pb_file_extensions = ["_pb.js"],
  # inputs are just to build in advance...
  pb_inputs = ["@tcn_protobuf//api/v0alpha:lms.proto"],
  supports_grpc = True,
)

proto_compile(
  name = "js_protos",
  langs = [":javascript"]
)

nodejs_binary(
    name = "parcel",
    entry_point = "parcel-bundler/bin/cli.js",
    node_modules = "//:node_modules",
    # data =  glob(["src/**", "public/**"]) + ["package.json", ".babelrc"],
    templated_args = ["--node_options=--preserve-symlinks"],
)

parcel(
    name = "parcel-build",
    srcs = ["//:testgroup", "package.json", ".babelrc"],
    node_modules="//:node_modules",
    entry_point = "src/index.js",
)



##############################################################
# THIS IS ALL OLD CRAP KEEPING HERE FOR REFERENCE FOR A BIT
##############################################################

# nodejs_binary(
#     name = "webpack",
#     entry_point = "webpack/bin/webpack.js",
#     visibility = ["//visibility:public"],
# )

# nodejs_binary(
#   name = "rsbinary",
#   entry_point = "react-scripts/scripts/build.js",
#   node_modules = "//:node_modules",
#   # templated_args = ["--node_options=--preserve-symlinks"],
#   # data = ["//:testgroup", "//:package.json", "//:node_modules"],
# )

# load(":rsgen.bzl", "rs")

# rs(
#     name = "rsgen",
#     srcs = ["//:testgroup", "package.json", "//:node_modules"],
# )





##################################################
# This is the react scripts build... doesn"t work.
##################################################

# nodejs_binary(
#     name = "reactscripts",
#     entry_point = "react-scripts/bin/react-scripts.js",
#     node_modules = "@noodles//:node_modules",
#     # data = glob([
#     #     "src/**",
#     #     "public/**",
#     # ]) + ["//:package.json"] + ["@noodles//:node_modules"],
#     templated_args = ["--node_options=--preserve-symlinks"],
# )

# load(":reactscripts.bzl", "reactscripts")

# reactscripts(
#     name = "reactscripts-build",
#     srcs = glob([
#         "src/**",
#         "public/**",
#     ]) + ["//:package.json"],
# )

# This doesnt work at all.
# genrule(
#   name = "reactscriptsgen",
#   srcs = glob([
#         "src/**",
#         "public/**",
#     ]) + ["//:package.json"] + ["@noodles//:node_modules"],
#   outs = ["build"],
#   cmd = """
#     ls -l external
#     """,
#   # tags = ["local"],
# )


##################################################
# Parcel build... works with a unsandboxed genrule but not with a .bzl extension rule.
##################################################



# genrule(
#   name = "parcelgen",
#   srcs = glob([
#         "src/**",
#         "public/**",
#     ]) + ["//:package.json"] + [".babelrc"] + ["//:node_modules"],
#   outs = ["build"],
#   cmd = """
#     parcel build src/index.js --out-dir build
#     cp -R build $(@D)
#     """,
# #   tags = ["local"], # uncomment this to un-sandbox... build is successful with this.
# )

# genrule(
#   name = "parcelwatch",
#   srcs = glob([
#         "src/**",
#         "public/**",
#     ]) + ["//:package.json"] + [".babelrc"] + ["//:node_modules"],
#   outs = ["watch"],
#   cmd = """
#     parcel public/index.html
#     """,
# #   tags = ["local"], # uncomment this to un-sandbox... build is successful with this.
# )


##################################################
# Rollup build
# This isnt finished being setup. Needs rollup configuration (complicated) in order
# to parse jsx / react / es6+
# This is taken from their example: https://github.com/bazelbuild/rules_nodejs/tree/master/examples/rollup
##################################################

# nodejs_binary(
#     name = "rollup",
#     entry_point = "rollup/bin/rollup",
#     node_modules = "@noodles//:node_modules",
# )

# load(":rollupgen.bzl", "rollup")
# rollup(
#     name = "bundle",
#     entry_point = "src/index.js",
#     srcs = glob([
#         "src/**",
#         "public/**",
#     ]) + ["//:package.json"] + [".babelrc"],
# )
